tests/fail_stable/no_traits.stderr
error[E0277]: the trait bound `Vec<usize>: RegexRepresentation` is not satisfied
 --> $DIR/no_traits.rs:2:32
  |
2 |     sscanf::scanf!("hi", "{}", std::vec::Vec<usize>);
  |                                ^^^^^^^^^^^^^^^^^^^^ the trait `RegexRepresentation` is not implemented for `Vec<usize>`
  |
  = note: required by `sscanf::RegexRepresentation::REGEX`
