tests/fail_stable/no_traits.rs
fn main() {
    sscanf::scanf!("hi", "{}", std::vec::Vec<usize>);
}
